Fixed amadeus footer on tablet

--- a/src/css/amadeus.css
+++ b/src/css/amadeus.css
@@ -269,7 +269,7 @@ background-image: linear-gradient(-134deg, #AA1030 0%, #D91B3D 100%);
 
 @media (min-width: 768px) {
   .project-more-info .top {
-    padding: 6rem 6rem 20rem;
+    padding: 6rem;
   }
 }
 
@@ -295,13 +295,7 @@ background-image: linear-gradient(-134deg, #AA1030 0%, #D91B3D 100%);
   }
 }
 
-@media (min-width: 768px) {
-  .project-more-info p {
-    margin-right: 30%;
-  }
-}
-
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .project-more-info p {
     margin-right: 40%;
   }
